@@ -253,6 +253,7 @@ FUNTAB R_FunTab[] = {
     {"match.call", do_matchcall, 0, 11, 4, {PP_FUNCALL, PREC_FN, 0}},
     {"crossprod", do_matprod, 1, 11, 2, {PP_FUNCALL, PREC_FN, 0}},
     {"tcrossprod", do_matprod, 2, 11, 2, {PP_FUNCALL, PREC_FN, 0}},
+    {"lengths", do_lengths, 0, 11, 1, {PP_FUNCALL, PREC_FN, 0}},
 
     {"attach", do_attach, 0, 111, 3, {PP_FUNCALL, PREC_FN, 0}},
     {"detach", do_detach, 0, 111, 1, {PP_FUNCALL, PREC_FN, 0}},
